# dedrive

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  app.py  config.py  index.html  main.py  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  profiles.py  proxy.js  pyproject.toml  setup.sh  vercel.json
.github/workflows/: release.yml
app/: globals.css  layout.js  manifest.js  robots.js  sitemap.js
app/(marketing)/: layout.js  page.js
app/(secure)/app/: layout.js  page.js
components/: App.js  Footer.js  Header.js  MarketingFooter.js  MarketingHeader.js  MarketingHero.js  screen-steps.js
components/screens/: AccountScreen.js  ExecuteScreen.js  ReviewScreen.js  ScanScreen.js
dedrive/: __init__.py  cli.py  config.py  dedup.py  drive.py  profiles.py  ui.py
gdrive_deduper/: __init__.py  cli.py  config.py  drive.py  profiles.py  ui.py
hooks/: useDecisions.js  useKeyboardShortcuts.js  useScanResults.js
js/: app.js  auth.js  drive.js  preview.js  ui.js  utils.js
lib/: analytics.js  auth.js  dedup.js  drive.js  preview.js  site.js  state.js
profiles/.example/: config.yaml
public/: robots.txt  sitemap.xml
public/brand/: manifest.json
public/brand/web-seo/: site.webmanifest
scripts/: openrouter-preflight.sh  run_lighthouse.sh
